# ledboard-lib

./: README.md  pyproject.toml
lebboardlib/: board_api.py  sampling_point.py
lebboardlib/serial_communication/: all_structs.py  c_header_maker.py
lebboardlib/serial_communication/c_structs/: __init__.py  sample_point.py
ledboardlib/: __init__.py  board_api.py  board_detection_api.py  color_format.py  color_mode.py  exceptions.py  fixture.py  gpio_enum.py  listed_board.py  mapping_mode.py  sampling_point.py  windows_drives.py
ledboardlib/api/: board.py  board_detection.py
ledboardlib/control_parameters/: c_struct.py  control_parameters.py
ledboardlib/dmx_attribution/: c_struct.py  dmx_attribution.py
ledboardlib/hardware_configuration/: c_struct.py  gpio_enum.py  hardware_configuration.py
ledboardlib/hardware_info/: c_struct.py  hardware_info.py
ledboardlib/interop_data/: dataclass.py  store.py
ledboardlib/sampling_point/: sampling_point.py
ledboardlib/sampling_point/c_struct/: led_info.py  sample_point.py
ledboardlib/scan/: __main__.py  detection_executor.py  detection_point.py  detector.py  detector_options.py  detector_processing_wrapper.py  exceptions.py  frame_detection_result.py  quantizer.py
ledboardlib/serial_communication/: all_structs.py  c_commands.py  c_header_maker.py
ledboardlib/serial_communication/c_structs/: __init__.py  control_parameters.py  hardware_configuration.py  hardware_info.py  sample_point.py
scripts/: board-16x10.py  detec-elephanz-25-02-2026.json  detec-melinerion-14-10-2025.json  detec-melinerion-22-10-2025.json  elephanz-dmx-attribution.hpp  elephanz.py  interop-data-melinerion.json  melinerion.py  sampling-points-elephanz.json  sampling-points-generator.py  sampling-points-melinerion.json  virage-caravane.py
