[build-system]
requires = [
  "setuptools>=46.0",
  "pythonarduinoserial@git+https://github.com/Frangitron/python-arduino-serial"
]
build-backend = "setuptools.build_meta"

[project]
name = "ledboardlib"
description = "LED Board Control App"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  { name = "Frangitron", email = "contact@frangitron.com" }
]
maintainers = [
  { name = "Frangitron", email = "contact@frangitron.com" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3 :: Only",
]
keywords = ["python", "frangitron"]
dynamic = ["version"]
